# Base_Project_Deluxe

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  clang-format  main.cpp  project_overview.ipynb
include/: Agent.h  AgentTypes.h  CollisionManager.h  Field.h  Space.h  utils.h
myenv/: pyvenv.cfg
output/: clearance_times.csv  diffusionCoeff.txt  diffusion_vs_speed.txt  diffusion_vs_tau.txt  plane_mesh_agents_disks_step_0.vtk  plane_mesh_agents_disks_step_1.vtk  plane_mesh_agents_disks_step_10.vtk  plane_mesh_agents_disks_step_100.vtk  plane_mesh_agents_disks_step_1000.vtk  plane_mesh_agents_disks_step_1001.vtk  plane_mesh_agents_disks_step_1002.vtk  plane_mesh_agents_disks_step_1003.vtk  plane_mesh_agents_disks_step_1004.vtk  plane_mesh_agents_disks_step_1005.vtk  plane_mesh_agents_disks_step_1006.vtk  plane_mesh_agents_disks_step_1007.vtk  plane_mesh_agents_disks_step_1008.vtk  plane_mesh_agents_disks_step_1009.vtk  plane_mesh_agents_disks_step_101.vtk  plane_mesh_agents_disks_step_1010.vtk  plane_mesh_agents_disks_step_1011.vtk  plane_mesh_agents_disks_step_1012.vtk  plane_mesh_agents_disks_step_1013.vtk  plane_mesh_agents_disks_step_1014.vtk  plane_mesh_agents_disks_step_1015.vtk  plane_mesh_agents_disks_step_1016.vtk  plane_mesh_agents_disks_step_1017.vtk  plane_mesh_agents_disks_step_1018.vtk  plane_mesh_agents_disks_step_1019.vtk  plane_mesh_agents_disks_step_102.vtk  plane_mesh_agents_disks_step_1020.vtk  plane_mesh_agents_disks_step_1021.vtk  plane_mesh_agents_disks_step_1022.vtk  plane_mesh_agents_disks_step_1023.vtk  plane_mesh_agents_disks_step_1024.vtk  (+2438 more)
(+12 files in other folders)
